[Fix] fix layout shift in navbar and

--- a/src/styles/components/_container.scss
+++ b/src/styles/components/_container.scss
@@ -5,8 +5,3 @@
   max-width: 100%;
   width: 100%;
 }
-
-.container {
-  margin-top: 12.5rem;
-  padding: 0 2rem;
-}
