--- a/src/styles/components/_hero.scss
+++ b/src/styles/components/_hero.scss
@@ -1,9 +1,15 @@
 .hero__container {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  gap: 1rem;
+  margin-top: 24rem;
+  padding: 0 1rem;
   .hero__copy {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    gap: 1rem;
+    max-width: 50%;
+    @include lt-md {
+      max-width: 100%;
+    }
   }
   .hero__img {
   }
